[tool.poetry]
authors = ["charwking <charwking@users.noreply.github.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.4.2"
celery = "^4.4.2"
email-validator = "^1.0.5"
emails = "^0.5.15"
fastapi = "^0.54.1"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
psycopg2-binary = "^2.8.5"
pydantic = "^1.4"
python = "^3.8"
python-dotenv = "^0.14.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-multipart = "^0.0.5"
raven = "^6.10.0"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
tenacity = "^6.1.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
# pylint = "~2.6.0" problem loading pylint so used pip
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
pylint = "^2.6.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
